# VirtualDAP

./: README.md
.github/workflows/: build_virtualdap.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/virtualdap/host/: MainActivity.kt
app/src/main/java/com/virtualdap/host/bridge/: AudioBridge.kt
app/src/main/java/com/virtualdap/host/ui/theme/: Theme.kt
guest_os/: CMakeLists.txt  VirtualAudioHAL.cpp  dumper_policy_configuration.xml
guest_os/include/: RingBuffer.h
